- Fix positioning issue on context menu - Fix z-index issue on context menu - Auto upload

--- a/app/styles/less/app.less
+++ b/app/styles/less/app.less
@@ -48,26 +48,29 @@
 // Dropdown Menu //
 // ============= //
 
-.dropdown-menu > li > div {
-  display: block;
-  padding: 3px 20px;
-  clear: both;
-  font-weight: normal;
-  line-height: @line-height-base;
-  color: @dropdown-link-color;
-  white-space: nowrap;
-  cursor: pointer;
-  .user-select-mixin;
+.dropdown-menu {
+  z-index: 1010;
+  > li > div {
+    display: block;
+    padding: 3px 20px;
+    clear: both;
+    font-weight: normal;
+    line-height: @line-height-base;
+    color: @dropdown-link-color;
+    white-space: nowrap;
+    cursor: pointer;
+    .user-select-mixin;
 
-  i.glyphicon {
-    padding-right: @padding-base-horizontal;
-    color: @gray-light;
-  }
+    i.glyphicon {
+      padding-right: @padding-base-horizontal;
+      color: @gray-light;
+    }
 
-  &:hover, &:focus {
-    color: @dropdown-link-hover-color;
-    text-decoration: none;
-    background-color: @dropdown-link-hover-bg;
+    &:hover, &:focus {
+      color: @dropdown-link-hover-color;
+      text-decoration: none;
+      background-color: @dropdown-link-hover-bg;
+    }
   }
 }
 
@@ -88,7 +91,7 @@
 
 #browser-toolbar {
   border-bottom: 1px solid @navbar-default-border;
-  height: 55px;
+  min-height: 55px;
 
   .browser-breadcrumb {
     button, a {
